--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,30 @@
 aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==21.2.0
-beanie==1.8.5
+beanie==1.8.6
 chardet==4.0.0
 click==7.1.2
+colorama==0.4.4
 dateparser==1.1.0
-discord.py @ git+https://github.com/iDevision/enhanced-discord.py.git@e621d5288eeec2472f248efe8ce5581348dadf8a
+discord.py==2.0.0a3784+g2a55525
 dnspython==2.1.0
 idna==3.3
 motor==2.5.1
 multidict==5.2.0
+Pillow==8.4.0
 pydantic==1.8.2
 pymongo==3.12.1
+python-dateutil==2.8.2
 python-Levenshtein==0.12.2
+pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
+regex==2021.11.10
+six==1.16.0
 thefuzz==0.19.0
 toml==0.10.2
+tqdm==4.62.3
 typing_extensions==4.0.0
+tzdata==2021.5
+tzlocal==4.1
+XlsxWriter==3.0.2
 yarl==1.7.2
-
-Pillow~=8.4.0
