--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dateparser==1.1.0
 git+https://github.com/tylovejoy/enhanced-discord.py.git@downstream-2.0
 dnspython==2.1.0
 idna==3.3
+matplotlib
 motor==2.5.1
 multidict==5.2.0
 Pillow==8.4.0
